--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -49,7 +49,7 @@ table {
 
 /* custom */
 a {
-  color: #7e8c8d;
+  /*color: #0d0e0e;*/
   text-decoration: none;
   -webkit-backface-visibility: hidden;
 }
@@ -91,7 +91,7 @@ body {
 }
 
 /*显示省略号*/
-.ellipsis{
+.ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
